testsuite/tests/backpack/should_fail/bkpfail01.stderr
[1 of 3] Processing p
  [1 of 2] Compiling H[sig]           ( p/H.hsig, nothing )
  [2 of 2] Compiling A                ( p/A.hs, nothing )
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling H                ( q/H.hs, nothing )
[3 of 3] Processing r
  Instantiating r
  [1 of 2] Including q
  [2 of 2] Including p
    Instantiating p(q:H)
    [1 of 2] Compiling H[sig]           ( p/H.hsig, nothing )

bkpfail01.bkp:2:5: error:
    Not in scope: type constructor or class ‘H’

bkpfail01.bkp:2:5: error: Not in scope: data constructor ‘H’
